fix broken css import

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -17,15 +17,3 @@
       0 0 36px var(--neon-color), 0 0 60px var(--neon-color);
   }
 }
-
-.neon-border {
-  --tw-border-opacity: 1;
-  border-color: rgb(
-    var(--neon-color-rgb, 0, 255, 255) / var(--tw-border-opacity)
-  );
-  display: inline-block; /* shrink-wrap to the image */
-  border-width: 2px;
-  border-style: solid var(--neon-color);
-  animation: neon-glow 2s ease-in-out infinite;
-  border-radius: 20%;
-}
